# SSA-OIST

./: README.md
cpp/: CMakeLists.txt  Doxyfile
cpp/apps/: main.cpp
cpp/include/: Composition.hpp  Participant.hpp  ReactionChannel.hpp  Solver.hpp  Species.hpp  Templates.tpp  Utils.hpp  Volume.hpp
cpp/src/: Composition.cpp  Participant.cpp  ReactionChannel.cpp  Solver.cpp  Species.cpp  Utils.cpp  Volume.cpp
python/: main.py  naive.py
